2003-07-08 23:20  bmeurer

	* ChangeLog, po/xfce4-session.pot, xfce4-session/ice-layer.c:
	Client was not removed from "session control" if an ICE error
	occurred.

2003-07-08 23:05  bmeurer

	* NEWS, configure, configure.ac, xfce4-session/Makefile.am,
	xfce4-session/Makefile.in, xfce4-session/client-list.c,
	xfce4-session/client-list.h, xfce4-session/client.c,
	xfce4-session/client.h, xfce4-session/main.c,
	xfce4-session/manager.c, xfce4-session/splash-screen.c,
	xfce4-session/tray-icon.c, xfce4-session/tray-icon.h,
	xfce4-session/util.c, xfce4-session/util.h: Several updates. See
	NEWS file for details.

2003-07-08 18:14  bmeurer

	* NEWS, docs/FAQ: Added notes about Oliviers recent changes to
	startxfce4.

2003-07-08 15:08  huysmans

	* po/es.gmo, po/es.po, po/es_MX.gmo, po/es_MX.po, po/nl.gmo,
	po/nl.po, configure, configure.ac: Add Dutch translations and fix
	Spanish ones

2003-07-08 04:40  edscott

	* po/: es.po, es_MX.po: specify utf-8 charset in spanish files

2003-07-08 04:36  edscott

	* configure.ac, po/es.po: european spanish (initial)

2003-07-08 04:34  edscott

	* configure.ac, po/es_MX.po: spanish

2003-07-07 23:33  bmeurer

	* ChangeLog, ltmain.sh: Trying Olivier's special MacOSX compat
	libtool.

2003-07-07 23:26  bmeurer

	* aclocal.m4, configure, po/de.gmo, po/de.po, po/xfce4-session.pot:
	Strings changed (due to tooltips being added).

2003-07-07 23:19  bmeurer

	* ChangeLog: Updated ChangeLog.

2003-07-07 23:18  bmeurer

	* ChangeLog, settings/session.c: Added tooltips and improved the
	"Install theme" dialog handling.

2003-07-07 22:12  bmeurer

	* NEWS, TODO, configure, configure.ac, docs/FAQ, docs/Makefile.am,
	docs/Makefile.in, po/de.gmo, po/de.po: Added FAQ. Updated german
	translation again. version to 0.0.21.

2003-07-07 21:35  bmeurer

	* po/: de.gmo, de.po: Updated German translation, thanks to Moritz
	Heiber.

2003-07-07 20:07  bmeurer

	* ChangeLog, Makefile.am, Makefile.in: Added
	ChangeLog.pre-xfce-devel to Makefile.am.
