@@ -3,8 +3,10 @@ xfce4-session/client.c
 xfce4-session/ice-layer.c
 xfce4-session/main.c
 xfce4-session/manager.c
-xfce4-session/util.c
 xfce4-session/shutdown.c
-xfce4-session/startup.c
 xfce4-session/splash-screen.c
+xfce4-session/startup.c
+xfce4-session/util.c
+xfce4-session/client-list.c
+xfce4-session/tray-icon.c
 xfce4-shutdown/main.c
