@@ -1,3 +1,11 @@
+2003-07-09 00:30  bmeurer
+
+	* ChangeLog, NEWS, TODO, defaults/default.session,
+	po/xfce4-session.pot, xfce4-session/main.c,
+	xfce4-session/manager.c, xfce4-session/manager.h,
+	xfce4-session/tray-icon.c, xfce4-session/tray-icon.h: Additional
+	notes and ChangeLog updated.
+
 2003-07-08 23:20  bmeurer
 
 	* ChangeLog, po/xfce4-session.pot, xfce4-session/ice-layer.c:
